# DEPI-Final-Project

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  app.py  pyproject.toml  requirements.txt
models/: model_features.json
notebooks/: experiments.ipynb  generate_data.py
src/: dashboard.py  preprocessing.py  train.py
streamlit dashboard/: dashboard.py
